# GstMediaPlay

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gst_player.cc  gst_player.h  main.cc
test/: CMakeLists.txt  initialization.c
test/initialization/: CMakeLists.txt
test/initialization_goption/: CMakeLists.txt  initialization_goption.c
